# anfe

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  generate_solution.bat  vcpkg-configuration.json  vcpkg.json
resources/shaders/: common.h  test_shader.hlsl
scripts/cmake/: helpers.cmake
scripts/vcpkg/overlay-ports/argh/: bump-cmake-version.patch  portfile.cmake
scripts/vcpkg/overlay-ports/entt/: portfile.cmake
scripts/vcpkg/overlay-ports/llgl/: portfile.cmake  usage  vcpkg.json
scripts/vcpkg/overlay-ports/rapidjson/: portfile.cmake
scripts/vcpkg/overlay-ports/rttr/: bump-cmake-version.patch  portfile.cmake
scripts/vcpkg/overlay-ports/sdl3/: portfile.cmake  vcpkg.json
scripts/vcpkg/overlay-ports/ufbx/: CMakeLists.txt  portfile.cmake  usage  vcpkg.json
scripts/vcpkg/overlay-ports/vfspp/: CMakeLists.txt  miniz-cmake-bump.patch  portfile.cmake  usage  vcpkg.json
src/: main.cpp
src/engine/: CMakeLists.txt
src/engine/engine/: assert.h  engine.cpp  engine.h  helpers.h  math.h  pch.h
src/engine/engine/integration/d3d12/: D3D12MemAlloc.cpp  integration.h
src/engine/engine/integration/entt/: intergration.h
src/engine/engine/integration/llgl/: DXTypes.cpp  DXTypes.h  integration.h
src/engine/engine/integration/math/: SimpleMath.h  integration.h  ivec2.h  ivec3.h  ivec4.h  uvec2.h  uvec3.h  uvec4.h
src/engine/engine/integration/renderdoc/: renderdoc_app.h
src/engine/engine/integration/rttr/: integration.h
src/engine/engine/integration/tracy/: integration.h
src/engine/engine/math/: aabb.h
src/engine/engine/reflection/: common.h  registration.h
src/engine/engine/render/: render_backend.h  shader_compiler.h
src/engine/engine/render/d3d12/: backend.cpp  backend.h  d3d12_backend.cpp  d3d12_backend.h  shader_compiler.cpp  shader_compiler.h  shader_resource.h
src/engine/engine/resources/: mesh_resource.cpp  mesh_resource.h  resource.h  shader_resource.h
src/engine/engine/services/: assert_service.cpp  assert_service.h  cli_service.cpp  cli_service.h  editor_service.cpp  editor_service.h  imgui_service.cpp  imgui_service.h  input_service.cpp  input_service.h  log_service.cpp  log_service.h  render_service.cpp  render_service.h  renderdoc_service.cpp  renderdoc_service.h  service.h  service_manager.cpp  service_manager.h  vfs_service.cpp  vfs_service.h  windows_service.cpp  windows_service.h  world_service.cpp  world_service.h
src/engine/engine/utils/: enum.h  family.cpp  family.h  hashed_string.h  noncopyable.h  string.h
